[gd_scene load_steps=7 format=3 uid="uid://c2weeh3iabe3x"]

[ext_resource type="Script" path="res://Scripts/card.gd" id="1_vh5a6"]
[ext_resource type="Texture2D" uid="uid://dsdchkfo3egbn" path="res://Sprites/cards/water/chuva_magica.jpg" id="2_3lb4m"]
[ext_resource type="LabelSettings" uid="uid://ck2udjr6wr1po" path="res://LabelSettings/CardText.tres" id="4_p578d"]
[ext_resource type="Texture2D" uid="uid://dtsv3tv83b5km" path="res://Sprites/cards/borders/moldura_agua.png" id="5_fqvqg"]
[ext_resource type="LabelSettings" uid="uid://dd0v8fsndlas2" path="res://LabelSettings/CardCost.tres" id="5_jbf56"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ke6ho"]
size = Vector2(485, 640)

[node name="Card" type="Node2D"]
script = ExtResource("1_vh5a6")

[node name="BaseCardSprite" type="Sprite2D" parent="."]
position = Vector2(-1.33514e-05, -2.77162e-05)
scale = Vector2(0.241935, 0.25)
texture = ExtResource("2_3lb4m")

[node name="CardFrameSprite" type="Sprite2D" parent="."]
scale = Vector2(0.193548, 0.2)
texture = ExtResource("5_fqvqg")

[node name="CardDescription" type="Node2D" parent="."]
position = Vector2(-210, 100)

[node name="CardDescriptionLabel" type="Label" parent="CardDescription"]
offset_left = -6.0
offset_top = 21.0
offset_right = 426.0
offset_bottom = 194.0
text = "Card Description"
label_settings = ExtResource("4_p578d")
horizontal_alignment = 1
autowrap_mode = 3

[node name="CardCost" type="Node2D" parent="."]

[node name="CardCostLabel" type="Label" parent="CardCost"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 180.0
offset_top = 250.0
offset_right = 201.0
offset_bottom = 289.0
grow_horizontal = 2
grow_vertical = 2
text = "1"
label_settings = ExtResource("5_jbf56")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CardName" type="Node2D" parent="."]
position = Vector2(-210, -308)

[node name="CardNameLabel" type="Label" parent="CardName"]
offset_top = -4.0
offset_right = 420.0
offset_bottom = 35.0
text = "Card Name"
label_settings = ExtResource("4_p578d")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Attributes" type="Node2D" parent="."]

[node name="AttackLabel" type="Label" parent="Attributes"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -225.0
offset_top = 270.0
offset_right = -204.0
offset_bottom = 309.0
grow_horizontal = 2
grow_vertical = 2
text = "0"
label_settings = ExtResource("4_p578d")

[node name="DivisionLabel" type="Label" parent="Attributes"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
offset_top = 270.0
offset_right = -179.0
offset_bottom = 309.0
grow_horizontal = 2
grow_vertical = 2
text = "/"
label_settings = ExtResource("4_p578d")

[node name="DefenseLabel" type="Label" parent="Attributes"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -175.0
offset_top = 270.0
offset_right = -154.0
offset_bottom = 309.0
grow_horizontal = 2
grow_vertical = 2
text = "0"
label_settings = ExtResource("4_p578d")

[node name="Area2D" type="Area2D" parent="."]
modulate = Color(1, 0.5875, 0.25, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
shape = SubResource("RectangleShape2D_ke6ho")

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
